# WebHarbor

./: .assetpaths  .assets-revision  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GUIDANCE.md  README.md  control_server.py  site_runner.py  websyn_start.sh
.claude/: ralph-loop.local.md
agent_demo/: README.md  agent.py  eval_judge.py  pyproject.toml  walk_discogs_tasks.py
configs/: auth_personas.json
docs/: deterministic-seed-inventory.md  search-url-realism.md  structured-task-pipeline.md  url-realism-audit.md
scripts/: audit_seed_randomness.py  build.sh  check_arxiv_metadata_latex.py  check_assets.sh  check_booking_filter_fixtures.py  check_search_url_realism.py  check_url_realism.py  download_smartasset_images.py  extract_assets.sh  fetch_assets.sh  fix_image_diversity.py  generate_structured_tasks.py  new_site.py  retry_state_city_images.py  structured_task_runtime.py  validate_structured_task.py  verify_carmax.sh
tests/: test_mutation_generators.py  test_reverse_generators_all_sites.py  test_reverse_identify_families.py  test_structured_task_batch_generation.py  test_task_spec_pipeline.py
webvoyager_dashboard/: OPERATIONS.md  README.md  app.js  audit_variable_space.py  audit_webvoyager_coverage.py  build_review_data.py  data.js  data_generation_stability.html  data_generation_stability.zh.md  generate_data.py  index.html  localize_reviews_zh.py  multi_state_task_report.json  mutation_tasks_audit.html  mutation_tasks_audit_data.js  review_data.js  serve_dashboard.py  styles.css  variable_audit.html  (+5 more)
(+3094 files in other folders)
